--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+//    implementation 'com.github.f0ris.sweetalert:library:1.5.1'
+}
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+//    compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'com.github.f0ris.sweetalert:library:1.5.1'
 }
